[monitor] - configured log de circuit break

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,13 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.cache.type=redis
 spring.cache.redis.time-to-live=600000
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework=TRACE
-logging.level.org.springdoc: TRACE
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework=TRACE
+#logging.level.org.springdoc: TRACE
+# Configuração para log de Resilience4j
+logging.level.io.github.resilience4j=DEBUG
+logging.level.io.github.resilience4j.circuitbreaker=DEBUG
+logging.level.io.github.resilience4j.retry=DEBUG
+logging.level.io.github.resilience4j.bulkhead=DEBUG
+logging.level.io.github.resilience4j.timelimiter=DEBUG
+
